separately the conversion to html and pdf works confusion with markdown and md

--- a/project.yml
+++ b/project.yml
@@ -62,11 +62,11 @@ rules:
 #  required: [ 'post' ]   # property which must exist - always true? 
 #  template: 'post.html'
 
- #         file:
- #           type: 'subprocess'
- #           cmd: [ './make-pdf.sh', '{{file}}' ]
- #           mime-type: 'application/pdf'
-          post: 'file://./data/posts/{{post}}.markdown'  # the unprocessed 
+           file:
+             type: 'subprocess'
+             cmd: [ './make-html.sh', '{{file}}' ]
+             mime-type: 'application/pdf'
+           post: 'file://./data/posts/{{post}}.html'  # the unprocessed 
   required: [ 'post' ]   # property which must exist - always true? 
   template: 'post.html'
 
