--- a/project.yml
+++ b/project.yml
@@ -56,8 +56,9 @@ rules:
 # for the posts in separate posts dir  
 # changed for use of subprocess make-pdf.sh
 - pattern: '/posts/{{postfile:*}}'
+  static : true 
   data:
-    file: # 'glob://./data/posts/{{postfile}}.*'
+    file: # 'glob://./data/posts/{{postfile}}.md'
 #    post: 'file://./data/posts/{{post}}.*'
 #  required: [ 'post' ]   # property which must exist - always true? 
 #  template: 'post.html'
@@ -68,7 +69,7 @@ rules:
              mime-type: 'application/pdf'
 #         post: 'file://./data/posts/{{post}}.html'  # the unprocessed 
 #  required: [ 'post' ]   # property which must exist - always true? 
-  template: 'page.html'
+#  template: 'page.html'
 
 
 #rules:
