--- a/project.yml
+++ b/project.yml
@@ -66,9 +66,9 @@ rules:
 #    post:
              type: 'subprocess'
              cmd: [ './make-html.sh', '{{postfile}}' ]
-             mime-type: 'application/pdf'
+             mime-type: 'application/json'   # pdf'
 #         post: 'file://./data/posts/{{post}}.html'  # the unprocessed 
-#  required: [ 'post' ]   # property which must exist - always true? 
+  required: [ 'post' ]   # property which must exist - always true? 
   template: 'page.html'
 
 
